# chromium-history-extension

./: Makefile  README.md  TESTING.md  build.sh  compile.sh
backend/: .gcloudignore  BACKEND_PLAN.md  DEPLOYMENT_GUIDE.md  README.md  deploy.sh  go.mod  main.go  openai.go  rate_limit.go  run-local.sh  setup.sh  types.go
backend/cmd/local/: main.go
chromium-extension/: .gitignore  PROJECT_STATUS.md
chromium-extension/dart/lib/shared/: chrome_storage.dart
chromium-extension/extension/assets/: README.md
chromium-extension/extension/options/: options.css
chromium-extension/extension/popup/: popup.html
dart/lib/shared/: chrome_history.dart
docs/: DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  backend-integration.md  prd.md  tasks.md
extension/background/: service_worker.js
extension/options/: options.html
extension/popup/: popup.css
frontend/: .gitignore  Makefile  PROJECT_STATUS.md''  README.md  TESTING.md  build.sh  bump-version.sh  compile.sh  sync-version.sh  test-extension.sh
frontend/dart/: pubspec.yaml  pubspec.yaml''
frontend/dart/lib/shared/: openai_service.dart
frontend/extension/: manifest.json
frontend/extension/background/: service_worker.js
frontend/extension/lib/: options.js  popup.js
frontend/extension/options/: options.css  options.html
frontend/extension/popup/: popup.css  popup.html
frontend/rust/: Cargo.toml  Cargo.toml''
frontend/rust/.cargo/: config.toml
frontend/rust/src/: lib.rs
