[package]
name = "chromium_history_wasm"
version = "0.1.9"
edition = "2021"
authors = ["Chromium History Extension"]
description = "WebAssembly module for processing browser history data"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
